--- a/front end/Exercise2/app/src/main/res/layout/activity_exercise_json.xml
+++ b/front end/Exercise2/app/src/main/res/layout/activity_exercise_json.xml
@@ -6,4 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".ExerciseJSON">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:background="#d8000000"
+        android:gravity="center"
+        android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/txtJson"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent" />
+
+    <Button
+        android:id="@+id/btnHit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/btn_bg_color"
+        android:elevation="5dp"
+        android:text="Hit"
+        android:textColor="#fff"
+        android:textSize="16sp" />
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
